Revision history for Test-Run-Plugin-ColorSummary

0.0101       Wed Nov  8 14:34:03 IST 2006
    * Added the links in the POD as generated by latest versions of
    Module-Starter.
    * First stable version.

0.0100_03    Thu Oct  5 16:12:23 IST 2006
    * Fixed the annoying problem with the colored error message followed by some
    empty lines.
    * Changed to the new Test-Run interface. (%args -> $args) 
    * Removed a redundant "use" call.
    * Changed the T::R::Obj interface to accept one hash ref, instead of 
      key1 => "value1", key2 => "value2" (%args) arguments.

0.0100_02    Sun Apr 23 23:07:36 IDT 2006
    Now over-riding _handle_runtests_error_text instead of 
    _handle_runtests_error, per the refactoring of Test::Run::Obj.
    
0.0100_01    Thu Apr  6 21:29:56 IDT 2006
    First version, released on an unsuspecting world.
