@@ -1,5 +1,8 @@
 Revision history for Test-Run-Plugin-ColorSummary
 
+    * Merged the Test-Run-CmdLine-Plugin-ColorSummary into this distribution.
+    Keeping them separated was too much trouble.
+
 0.0101       Wed Nov  8 14:34:03 IST 2006
     * Added the links in the POD as generated by latest versions of
     Module-Starter.
